fix(style): align options of version selector

--- a/src/app/components/workflow-version-selector/workflow-version-selector.component.scss
+++ b/src/app/components/workflow-version-selector/workflow-version-selector.component.scss
@@ -1,9 +1,31 @@
-.white-badge {
-  color: white !important;
-  background-color: white !important;
-}
+:host ::ng-deep {
+  .white-badge {
+    color: white !important;
+    background-color: white !important;
+  }
 
-.version-option {
-  color: white !important;
-  font-size: 0.2rem;
+  .version-option {
+    margin: auto;
+    text-align: center;
+    width: 100%;
+
+    li a.version-option span.text {
+      margin-right: 0 !important;
+    }
+  }
+
+  .selected {
+    color: white !important;
+  }
+
+  button {
+    .filter-option {
+      text-align: center;
+    }
+  }
+
+  .version-picker {
+    text-align: center;
+    margin: auto !important;
+  }
 }
